feat: Spring Security 및 P6Spy SQL 로깅 설정 추가
- Spring Security 기본 설정 추가 (모든 요청 허용, CSRF 비활성화)
- P6Spy 설정 파일 추가로 SQL 쿼리 로깅 활성화
- 개발 환경에서 데이터베이스 쿼리 디버깅 지원 강화

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -99,3 +99,6 @@ blob.oauth.google.redirect-uri=${BLOB_GOOGLE_REDIRECT_URI:http://localhost:8080/
 blob.file.upload.path=${BLOB_FILE_UPLOAD_PATH:./uploads/blob}
 blob.file.max-size=10MB
 blob.file.allowed-types=image/jpeg,image/png,image/gif,image/webp
+
+# P6Spy 설정 - SQL 로깅을 위해 데이터소스 URL에 p6spy 프록시 사용
+# 개발 환경에서만 활성화하려면 프로파일별로 설정 가능
